# cnf

./: CMakeLists.txt  README.md  SAT.cpp  SATBase.cpp  SATCompile.cpp  SATHybrid.cpp  compile_solution.cpp  compile_solution.cxx  hybrid_solution.cpp  hybrid_solution.cxx  runtime_solution.cpp  runtime_solution.cxx
testing_system/: CMakeLists.txt
testing_system/accuracy/: CMakeLists.txt  Test  accuracy.cpp
testing_system/performance/: CMakeLists.txt  performance.cpp  testDataPerf.h
testing_system/python/: generatorBigClauses.py  generatorPerformance.py  generatorSmoke.py  testData.h  testDataBigClauses.h
tests/: CMakeLists.txt  compile_test.cpp  dummy_test.cpp  hybrid_test.cpp  runtime_test.cpp  testData.h  testDataBigClauses.h
